--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -177,12 +177,6 @@ bind = $mainMod, F, fullscreen
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, SPACE, togglesplit, # dwindle
 
-#bind = $mainMod, K, togglegroup,
-#bind = $mainMod, Tab, changegroupactive, f
-
-#bind = $mainMod SHIFT, G,exec,hyprctl --batch "keyword general:gaps_out 5;keyword general:gaps_in 3"
-#bind = $mainMod , G,exec,hyprctl --batch "keyword general:gaps_out 0;keyword general:gaps_in 0"
-
 # Volume control
 
 bind=,XF86AudioLowerVolume,exec,pamixer -ud 3 && pamixer --get-volume > /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob
@@ -212,85 +206,10 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
-#bind = $mainMod, 1, workspace, 1
-#bind = $mainMod, 2, workspace, 2
-#bind = $mainMod, 3, workspace, 3
-#bind = $mainMod, 4, workspace, 4
-#bind = $mainMod, 5, workspace, 5
-#bind = $mainMod, 6, workspace, 6
-#bind = $mainMod, 7, workspace, 7
-#bind = $mainMod, 8, workspace, 8
-#bind = $mainMod, 9, workspace, 9
-#bind = $mainMod, 0, workspace, 10
-#bind = $mainMod, period, workspace, e+1
-#bind = $mainMod, comma, workspace,e-1
-
-#bind = $mainMod, minus, movetoworkspace,special
-#bind = $mainMod, equal, togglespecialworkspace
-
 bind = $mainMod SHIFT,left ,movewindow, l
 bind = $mainMod SHIFT,right ,movewindow, r
 bind = $mainMod SHIFT,up ,movewindow, u
 bind = $mainMod SHIFT,down ,movewindow, d
-
-# Move active window to a workspace with mainMod + CTRL + [0-9]
-#bind = $mainMod CTRL, 1, movetoworkspace, 1
-#bind = $mainMod CTRL, 2, movetoworkspace, 2
-#bind = $mainMod CTRL, 3, movetoworkspace, 3
-#bind = $mainMod CTRL, 4, movetoworkspace, 4
-#bind = $mainMod CTRL, 5, movetoworkspace, 5
-#bind = $mainMod CTRL, 6, movetoworkspace, 6
-#bind = $mainMod CTRL, 7, movetoworkspace, 7
-#bind = $mainMod CTRL, 8, movetoworkspace, 8
-#bind = $mainMod CTRL, 9, movetoworkspace, 9
-#bind = $mainMod CTRL, 0, movetoworkspace, 10
-#bind = $mainMod CTRL, left, movetoworkspace, -1
-#bind = $mainMod CTRL, right, movetoworkspace, +1
-
-# same as above, but doesnt switch to the workspace
-#bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-#bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-#bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-#bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-#bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-#bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-#bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-#bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-#bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-#bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
-
-# Scroll through existing workspaces with mainMod + scroll
-#bind = $mainMod, mouse_down, workspace, e+1
-#bind = $mainMod, mouse_up, workspace, e-1
-
-#binds {
-#     workspace_back_and_forth = 1
-#     allow_workspace_cycles = 1
-#}
-#bind = $mainMod,slash,workspace,previous
-
-#bind = $mainMod,R,submap,resize
-#submap = resize
-#binde =,right,resizeactive,15 0
-#binde =,left,resizeactive,-15 0
-#binde =,up,resizeactive,0 -15
-#binde =,down,resizeactive,0 15
-#binde =,l,resizeactive,15 0
-#binde =,h,resizeactive,-15 0
-#binde =,k,resizeactive,0 -15
-#binde =,j,resizeactive,0 15
-#bind =,escape,submap,reset
-#submap = reset
-
-#bind=CTRL SHIFT, left, resizeactive,-15 0
-#bind=CTRL SHIFT, right, resizeactive,15 0
-#bind=CTRL SHIFT, up, resizeactive,0 -15
-#bind=CTRL SHIFT, down, resizeactive,0 15
-#bind=CTRL SHIFT, l, resizeactive, 15 0
-#bind=CTRL SHIFT, h, resizeactive,-15 0
-#bind=CTRL SHIFT, k, resizeactive, 0 -15
-#bind=CTRL SHIFT, j, resizeactive, 0 15
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -310,6 +229,7 @@ exec-once = mako &
 exec-once = nm-applet --indicator &
 exec-once = bash -c "mkfifo /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob && tail -f /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob | wob & disown" &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+exec-once = syncthing serve --no-browser &
 
 # Float Necessary Windows
 windowrule=float,Rofi
