--- a/home2/.config/hypr/hyprland.conf
+++ b/home2/.config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ general {
     gaps_in = 4
     gaps_out = 5
     border_size = 3
-    col.active_border = rgba(FF017FFF) rgba(9832FEFF) rgba(00B9E6FF) 360deg # Androgyne flag
+    col.active_border = rgba(5BCEFAFF) rgba(F5A9B8FF) rgba(F5A9B8FF) rgba(FFFFFFFF) rgba(F5A9B8FF) rgba(F5A9B8FF) rgba(5BCEFAFF) 90deg # Trans flag
     #col.active_border = rgba(2CE071FF) rgba(2ce092AA) rgba(84E0B8AA) 45deg
     #col.inactive_border = rgba(66333333)
     col.inactive_border = rgba(595959aa)
@@ -219,7 +219,7 @@ bindm = $mainMod, mouse:273, resizewindow
 #exec-once = telegram-desktop
 #exec-once = armcord
 #exec-once = swaybg -o \* -i /usr/share/wallpapers/cachyos-wallpapers/Liquid.png -m fill
-exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/CachyVoidDemitrans.jpg -m fill
+exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/astolfo-minimal.png -m fill
 #------------#
 # auto start #
 #------------#
