new hyprland config (home2)

--- a/home2/.config/hypr/hyprland.conf
+++ b/home2/.config/hypr/hyprland.conf
@@ -157,24 +157,27 @@ device {
 $mainMod = SUPER
 
 # Switching workspaces
-bind = SUPER, mouse_up, exec, hyprnome --previous
-bind = SUPER, mouse_down, exec, hyprnome
-bind = SUPERSHIFT, mouse_up, exec, hyprnome --previous --move
-bind = SUPERSHIFT, mouse_down, exec, hyprnome --move
+bind = $mainMod, mouse_up, exec, hyprnome --previous
+bind = $mainMod, mouse_down, exec, hyprnome
+bind = $mainMod SHIFT, mouse_up, exec, hyprnome --previous --move
+bind = $mainMod SHIFT, mouse_down, exec, hyprnome --move
 
+# Execs
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
-bind = $mainMod, C, killactive,
-#bind = $mainMod SHIFT, M, exit,
-#bind = $mainMod, V, togglefloating,
-bind = $mainMod, mouse:274, togglefloating
-#bind = CTRL, SPACE, exec, rofi -show combi -modi window,run,emoji,combi -combi-modi window,run,emoji
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, wofi-emoji
+
+# Killing and Minimizing
+bind = $mainMod, C, killactive,
+bind = $mainMod SHIFT, X, movetoworkspacesilent, special
+bind = $mainMod, X, togglespecialworkspace, special
+
+# Window manipulation
+bind = $mainMod, mouse:274, togglefloating
 bind = $mainMod, F, fullscreen
-#bind = $mainMod, Y, pin
-#bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod SHIFT, F, fakefullscreen
 bind = $mainMod, SPACE, togglesplit, # dwindle
 
 # Volume control
@@ -219,7 +222,8 @@ bindm = $mainMod, mouse:273, resizewindow
 #exec-once = telegram-desktop
 #exec-once = armcord
 #exec-once = swaybg -o \* -i /usr/share/wallpapers/cachyos-wallpapers/Liquid.png -m fill
-exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/astolfo-minimal.png -m fill
+exec-once = swaybg -o "HDMI-A-1" -i ~/.config/hypr/wallpapers/samus-aran.jpg -m fill
+exec-once = swaybg -o "DP-1" -i ~/.config/hypr/wallpapers/samus-aran-blast.jpg -m fill
 #------------#
 # auto start #
 #------------#
