--- a/home2/.config/hypr/hyprland.conf
+++ b/home2/.config/hypr/hyprland.conf
@@ -222,8 +222,8 @@ bindm = $mainMod, mouse:273, resizewindow
 #exec-once = telegram-desktop
 #exec-once = armcord
 #exec-once = swaybg -o \* -i /usr/share/wallpapers/cachyos-wallpapers/Liquid.png -m fill
-exec-once = swaybg -o "HDMI-A-1" -i ~/.config/hypr/wallpapers/samus-aran.jpg -m fill
-exec-once = swaybg -o "DP-1" -i ~/.config/hypr/wallpapers/samus-aran-blast.jpg -m fill
+exec-once = swaybg -o "HDMI-A-1" -i ~/.config/hypr/wallpapers/Astolfo-epic.png -m fill
+exec-once = swaybg -o "DP-1" -i ~/.config/hypr/wallpapers/Astolfo-epic-blacknwhite.jpg -m fill
 #------------#
 # auto start #
 #------------#
