new config update

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -4,7 +4,8 @@
 # For a full list, see the wiki
 #
 
-monitor=,preferred,auto,auto
+monitor= DP-1, 1920x1080, 0x0, 1
+monitor= HDMI-A-1, 2560x1080, 1920x0, 1
 
 # Slow app launch fix
 exec-once = systemctl --user import-environment &
@@ -50,8 +51,8 @@ general {
     gaps_in = 4
     gaps_out = 5
     border_size = 3
-    #col.active_border = rgba(FF017FFF) rgba(9832FEFF) rgba(00B9E6FF) 360deg # Androgyne flag
-    col.active_border = rgba(2CE071FF) rgba(2ce092AA) rgba(84E0B8AA) 45deg
+    col.active_border = rgba(5BCEFAFF) rgba(F5A9B8FF) rgba(F5A9B8FF) rgba(FFFFFFFF) rgba(F5A9B8FF) rgba(F5A9B8FF) rgba(5BCEFAFF) 90deg # Trans flag
+    #col.active_border = rgba(2CE071FF) rgba(2ce092AA) rgba(84E0B8AA) 45deg
     #col.inactive_border = rgba(66333333)
     col.inactive_border = rgba(595959aa)
 
@@ -149,32 +150,42 @@ gestures {
 }
 
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = royuan-yunzii-kc84
+    kb_layout = br, us
 }
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Switching workspaces
-bind = SUPER, mouse_up, exec, hyprnome --previous
-bind = SUPER, mouse_down, exec, hyprnome
-bind = SUPERSHIFT, mouse_up, exec, hyprnome --previous --move
-bind = SUPERSHIFT, mouse_down, exec, hyprnome --move
+# Switch keyboard layout
+bind = $mainMod ALT, SPACE, exec, hyprctl switchxkblayout $(python ~/.config/hypr/get_mainkb.py) next
 
+# Switching workspaces
+bind = $mainMod, mouse_up, exec, hyprnome --previous
+bind = $mainMod, mouse_down, exec, hyprnome
+bind = $mainMod SHIFT, mouse_up, exec, hyprnome --previous --move
+bind = $mainMod SHIFT, mouse_down, exec, hyprnome --move
+
+# lock/unlock cursor in monitor
+bind = $mainMod, comma, exec, hyprctl keyword monitor HDMI-A-1, 2560x1080, 1920x0, 1
+bind = $mainMod, period, exec, hyprctl keyword monitor HDMI-A-1, 2560x1080, 3000x0, 1
+
+# Execs
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
-bind = $mainMod, C, killactive,
-#bind = $mainMod SHIFT, M, exit,
-#bind = $mainMod, V, togglefloating,
-bind = $mainMod, mouse:274, togglefloating
-#bind = CTRL, SPACE, exec, rofi -show combi -modi window,run,emoji,combi -combi-modi window,run,emoji
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, wofi-emoji
+
+# Killing and Minimizing
+bind = $mainMod, C, killactive,
+bind = $mainMod SHIFT, X, movetoworkspacesilent, special
+bind = $mainMod, X, togglespecialworkspace, special
+
+# Window manipulation
+bind = $mainMod, mouse:274, togglefloating
 bind = $mainMod, F, fullscreen
-#bind = $mainMod, Y, pin
-#bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod SHIFT, F, fakefullscreen
 bind = $mainMod, SPACE, togglesplit, # dwindle
 
 # Volume control
@@ -219,7 +230,8 @@ bindm = $mainMod, mouse:273, resizewindow
 #exec-once = telegram-desktop
 #exec-once = armcord
 #exec-once = swaybg -o \* -i /usr/share/wallpapers/cachyos-wallpapers/Liquid.png -m fill
-exec-once = swaybg -o \* -i ~/.config/hypr/wallpapers/CachyVoid.jpg -m fill
+exec-once = swaybg -o "HDMI-A-1" -i ~/.config/hypr/wallpapers/Astolfo-epic.png -m fill
+exec-once = swaybg -o "DP-1" -i ~/.config/hypr/wallpapers/Astolfo-epic-blacknwhite.jpg -m fill
 #------------#
 # auto start #
 #------------#
@@ -230,6 +242,7 @@ exec-once = nm-applet --indicator &
 exec-once = bash -c "mkfifo /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob && tail -f /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob | wob & disown" &
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = syncthing serve --no-browser &
+exec-once = systemctl --user enable opentabletdriver.service --now
 
 # Float Necessary Windows
 windowrule=float,Rofi
